--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -43,6 +43,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+	    <plugin>
+          	<groupId>org.apache.maven.plugins</groupId>
+          	<artifactId>maven-surefire-plugin</artifactId>
+          	<version>2.21.0</version>
+            </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
